--- a/notebooks/config/config.json
+++ b/notebooks/config/config.json
@@ -5,5 +5,6 @@
   "MINIO_ENDPOINT" : "",
   "MINIO_ACCESS_KEY" : "",
   "MINIO_SECRET_KEY" : "",
-  "local_vloume": "/home/docker/notebooks/data"
+  "local_vloume": "/home/docker/notebooks/data",
+  "minio_bucket": "data-lake"
 }
